@@ -12,7 +12,7 @@ Vcs-Git: https://github.com/zentyal/zentyal.git
 Package: zentyal-dns
 Architecture: all
 Depends: zentyal-core (>= 8.0.0), zentyal-core (<< 8.1.0), zentyal-firewall,
-         libdigest-hmac-perl, bind9,
+         libdigest-hmac-perl, bind9, resolvconf,
          ${misc:Depends}
 Description: Zentyal - DNS Server
  Zentyal is a Linux small business server that can act as
