@@ -14,7 +14,7 @@ function initial_conf() {
 
 function mod_disabled() {
     # This function stops and disables the module
-    systemctl disable --now named named-resolvconf
+    systemctl disable --now named resolvconf named-resolvconf
 }
 
 
