@@ -1,12 +1,5 @@
 <%args>
-    $runResolvConf
 </%args>
 # File generated by Zentyal.
-
-% if ($runResolvConf) {
-RESOLVCONF="yes"
-% } else {
-RESOLVCONF="no"
-% }
 
 OPTIONS="-u bind -4"
